--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@ p {
   padding: 0;
   margin: 0;
 }
-.page-link, 
+.page-link,
 .link {
   font-weight: 500;
   line-height: 1.14;
@@ -224,6 +224,9 @@ p {
   justify-content: center;
   margin-bottom: 50px;
 }
+.list-item:not(:last-child) {
+  margin-right: 8px;
+}
 .portfolio-button {
   font-weight: 500;
   font-size: 16px;
@@ -234,12 +237,7 @@ p {
   border-radius: 4px;
   letter-spacing: 0.03em;
   border: none;
-  margin-right: 8px;
 }
-.portfolio-button:last-child {
-  margin-right: 0;
-}
-
 .portfolio-button:hover,
 .portfolio-button:focus {
   background-color: var(--brand-color);
@@ -247,11 +245,11 @@ p {
   box-shadow: 0 3px 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
-.portfolio-card:not(:nth-child(-n+3)) {
+.portfolio-card:not(:nth-child(-n + 3)) {
   margin-top: 30px;
 }
 
-.portfolio-card:not(:nth-child(3n+3)) {
+.portfolio-card:not(:nth-child(3n + 3)) {
   margin-right: 30px;
 }
 .card-info {
@@ -273,4 +271,3 @@ p {
 .address {
   margin-top: 20px;
 }
-
