--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,10 @@ p {
   text-align: center;
   letter-spacing: 0.06em;
   margin-top: 0;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
+  max-width: 696px;
 }
 .hero-button {
   color: var(--white-color);
